<?xml version="1.0"?>
<package>
  <name>ros_realtime</name>
  <version>1.0.13</version>
  <description>The ros_realtime package</description>
 
  <maintainer email="dash@clearpathrobotics.com">Devon Ash</maintainer>
 
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rosrt</run_depend>
  <run_depend>lockfree</run_depend>
  <run_depend>allocators</run_depend>
  <run_depend>rosatomic</run_depend>

  <export>
      <metapackage/>
  </export>
</package>
