<package>
  <name>rosatomic</name>
  <version>1.0.12</version>
  <description>rosatomic provides the C++11-style atomic operations by pulling symbols from the proposed Boost.Atomic
     package into the ros namespace.  Once C++11-style atomics (std::atomic) are available from compilers, rosatomic will
     conditionally use those instead.</description>
  <maintainer email="dash@clearpathrobotics.com">Devon Ash</maintainer>

  <license>BSD</license>
  <license>Boost</license>

  <url type="website">http://ros.org/wiki/rosatomic</url>
  <author>Josh Faust</author>

  <buildtool_depend>catkin</buildtool_depend>


<export>
    <cpp cflags="-I${prefix}/include"/>
</export>

</package>

